--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                             <th scope="col">Completed Time</th>
                             <th scope="col">Waiting Time</th>
                             <th scope="col">Turnaround Time</th>
+                            <th scope="col">Priority</th>
                         </tr>
                     </thead>
                     <tbody> 
